Added all types of actions